<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.movieui.screens.detailMoviePage.DetailMovieFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/movieItemHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rounded_dark"
            android:elevation="7dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:background="@color/white"
                android:elevation="10dp"
                android:contentDescription="@string/poster" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                tools:text="@string/movie_name"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                tools:text="@string/movie_description"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="2341,342" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>