<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.movieui.screens.loginPage.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_Login"
        app:layout_constraintEnd_toEndOf="@+id/tv_Login"
        app:layout_constraintStart_toStartOf="@+id/tv_Login" />

    <EditText
        android:id="@+id/tv_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="130dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/password_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:text="@string/login_button"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/error_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

</androidx.constraintlayout.widget.ConstraintLayout>